--- a/source/emissary/index.html.slim
+++ b/source/emissary/index.html.slim
@@ -86,9 +86,9 @@ section.masthead.bg-dark.bg-greens-grad.product-cmi.relative id=current_page.dat
     .row.align-middle.align-center
       .columns.small-12.medium-10.large-6.text-center
         = inline_svg("emissary-icon-large-white", class: "masthead-icon")
-        h1.headline-3.text-bold.margin-bottom-sm Emissary® – Keep data in motion
-        p.lead Emissary helps you implement effortlessly, innovate brilliantly, deliver value swiftly and scale confidently.
-        p Why should health data exchange be so inefficient and costly, when information is easily – even instantaneously – accessible in almost all other aspects of our modern lives?
+        h1.headline-2 style="margin-bottom: 0.2rem;" Emissary®
+        h2.headline-5.spaced-out Keep data in motion
+        = partial "partials/snippets/button", :locals => { :label => "Get started", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin step-2", :data_track_group => "compliance", :item_id => "get-ccms-mobile", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
     /.row.align-center.text-center.collapse
       .column.small-12.medium-4.shrink
         = partial "partials/snippets/button", :locals => { :label => "Chart Retrieval", :url => "##{current_page.data.subnav[1].slug}", :button_classes => "button hollow hollow-invisible hollow-inverted", :data_track_group => "integration", :item_id => "explore-#{current_page.data.subnav[1].slug}", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
@@ -102,9 +102,15 @@ section.masthead.bg-dark.bg-greens-grad.product-cmi.relative id=current_page.dat
     /= inline_svg("products-cards-color", class: "z-5 art-accent step-1")
     / .art-bg-fill.art-light-blob
     .z-0.art-bg-fill.art-pattern.container-image--center.lozad data-background-image=bg_image
-  .strip.strip-small.strip-greens
+  .strip.strip-greens
 
-section.section-article.bg-white id=current_page.data.subnav[1].slug data-magellan-target=current_page.data.subnav[1].slug
+section.section-article.bg-gray-2
+  .row.collapse.align-center
+    .columns.small-12.medium-8.large-6
+      p.lead Why should health data exchange be so inefficient and costly, when information is easily – even instantaneously – accessible in almost all other aspects of our modern lives?
+      p.lead.headline-3.text-light Emissary helps you implement effortlessly, innovate brilliantly, deliver value swiftly and scale confidently.
+
+section.section-article.bg-gray-11 id=current_page.data.subnav[1].slug data-magellan-target=current_page.data.subnav[1].slug
   .row.align-center.align-middle
     .columns.small-12.medium-8.large-4
       h3.headline-3 Emissary is a proven API solution
@@ -114,6 +120,17 @@ section.section-article.bg-white id=current_page.data.subnav[1].slug data-magell
     .columns.small-12.medium-4.large-6
       img.lozad src=loader_rect data-src="https://images.ctfassets.net/189dvqdsjh46/TvIRvb1AwzfXo7MsUHmJ6/df7185acdd6125ae327784c41f0de549/emissary-product-diagram-3.png" alt="emissary diagram"
 
+section.section-article.bg-gray-3
+  .row.align-center
+    .columns.small-12.medium-10.large-10.text-center
+      h3.headline-3 How is Datica Emissary different from Datica CMI?
+  .row.align-center
+    .columns.small-12.medium-6.large-5
+      p.lead <a class="link--white" href="/compliant-managed-integration" title="Datica Compliant Managed Integration">Datica CMI</a> is a compliant application package that alleviates the hardships of working with standards-based interoperability, such as HL7v2 or FHIR.
+    .columns.small-12.medium-6.large-5
+      p.lead <strong>Datica Emissary</strong> is a centralized API toolset that is installed within the data systems on-site at the hospital, such as EHRs, thus giving unprecedented access, control, and scalability of clinical data.
+
+.strip.strip-small.strip-greens
 section.section-article.bg-gray-12 id=current_page.data.subnav[2].slug data-magellan-target=current_page.data.subnav[2].slug
   .row.align-center
     .columns.small-12.medium-10.large-8
@@ -139,7 +156,7 @@ section.section-article.bg-dark.strip-greens-dark id=current_page.data.subnav[3]
     .columns.small-12.medium-4.large-6
       = Kramdown::Document.new(data.site.videos["y0y8MVijxDirsUyvbYzUa"].custom_form).to_html  
 
-section.section-article.bg-white id=current_page.data.subnav[4].slug data-magellan-target=current_page.data.subnav[4].slug
+/section.section-article.bg-white id=current_page.data.subnav[4].slug data-magellan-target=current_page.data.subnav[4].slug
   .row.align-center
     .columns.small-12.medium-10.large-8
       h3.headline-3 How does Emissary compare with other integration models?
