About, EHR page updates

--- a/source/about/index.html.slim
+++ b/source/about/index.html.slim
@@ -112,7 +112,7 @@ subnav:
 investors:
   -
     title: "Arthur Ventures"
-    url: ""
+    url: "https://arthurventures.com/"
     logo: "https://images.ctfassets.net/189dvqdsjh46/4cObssAG4goygs6kYoggm6/125b40ff261847103d0d9c9fc22d4393/av-logo.png"
     logo_size: "logo-size--medium"
   -
@@ -122,12 +122,12 @@ investors:
     logo_size: "logo-size--small-mid"
   -
     title: "Baird Ventures"
-    url: ""
+    url: "http://www.bairdcapital.com/"
     logo: "https://images.ctfassets.net/189dvqdsjh46/54MNeLPfOM68gyIya8sySU/1ae051e26424b0888c0bb93d8d3ba0b3/bc-logo.png"
     logo_size: "logo-size--medium"
   -
     title: "Chicago Ventures"
-    url: ""
+    url: "http://chicagoventures.com/"
     logo: "https://images.ctfassets.net/189dvqdsjh46/4BIGV3EJ9SmayOc8YOyeui/f38bf67be633f330fa5470de6e55bd34/cv-logo.png"
     logo_size: "logo-size--medium"
   -
@@ -137,7 +137,7 @@ investors:
     logo_size: "logo-size--medium"
   -
     title: "Lewis and Clark Ventures"
-    url: ""
+    url: "https://lewisandclarkventures.com/"
     logo: "https://images.ctfassets.net/189dvqdsjh46/6bhxfVnDKEUmWcC28Esk4I/9ff2c80e24438b3356e58470f9b61f9f/lavc-logo.png"
     logo_size: "logo-size--medium"
   -
