--- a/source/ehr-integration/index.html.slim
+++ b/source/ehr-integration/index.html.slim
@@ -42,7 +42,7 @@ section#top.show-for-large.section-article.pad-no-bottom.bg-gray-12.container-im
         .bg-white.pad--lg
           h2.headline-3.text-bold Activate your digital health product with data from any EHR
           p.lead You've created an amazing healthcare application, now it's time to grow by exchanging data with more EHRs. Datica enables EHR integrations at scale.
-          = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "/compliant-managed-integration#cta", :button_classes => "button nomargin", :data_track_group => "integration", :item_id => "get-integration-desktop", :icon => "icon-chevron-right", :icon_align => "right" }
+          = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "/compliant-managed-integration#cta", :button_classes => "button nomargin secondary", :data_track_group => "integration", :item_id => "get-integration-desktop", :icon => "icon-chevron-right", :icon_align => "right" }
 .strip.strip-cmi
 
 / section#top.section-article.bg-gray-11.container-image-fill.lozad data-background-image="?fit=crop&w=1600&h=800"
@@ -64,24 +64,31 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
       p.lead.group Datica's approach to integration has helped a wide range of solutions across the entire spectrum of healthcare.
   .row
     .columns.shrink
+
+
+  .row.group
+    .columns.small-12.medium-6.large-6.group
       .media-object.relative.has-blob
         .media-object-section
           = inline_svg("cmi-logo-w", class: "icon-size--xlarge")
         .media-object-section.media-object--info.main-section.align-self-middle
           h3.headline-4 Compliant Managed Integration
           .strip.strip-small.strip-cmi.margin-bottom-small
-          p.lead Scalable, secure data exchange with any EHR
-        / .blob-color.blob-cmi.z-auto data-glow="false"
-
-      / .subhead--spaced CMI
-      / .blob-color.blob-cmi.z-auto data-glow="false"
-  .row.group
-    .columns.small-12.medium-6.large-6.group
+          p.lead Standards-based integration with any EHR
       p.lead We combine cutting-edge automation of cloud infrastructure security, DevOps processes, and interface engines, with our extensive experience in solving healthcare integration problems. All built on a solid foundation of <strong>continuous HIPAA compliance</strong>.
       = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "/compliant-managed-integration/", :button_classes => "button button--light button-inline", :data_track_group => "integration", :item_id => "get-cmi", :icon => "icon-chevron-right", :icon_align => "right" }
-    .columns.small-12.medium-6.large-6
-      = partial("partials/cards/quote-customer", :locals => { :customer => data.site.customers['66BznN8Y482iSswswQAice'], :classes => 'nopad bg-gray-11' })
-            / <h2 class="headline-3">Get to market faster, beat the competition, and meet compliance requirements&mdash;all with fewer engineering resources.</h2>
+    .columns.small-12.medium-8.large-6.group
+      .media-object
+        .media-object-section
+          = inline_svg("emissary-icon-large-white", class: "icon-size--xlarge")
+        .media-object-section.media-object--info.main-section.align-self-middle
+          h3.headline-4 Emissary
+          .strip.strip-small.strip-greens.margin-bottom-small
+          p.lead Scalable, centralized APIs for clinical data
+      p Emissary makes health data liquid. It provides a robust set of REST APIs that read and write to EHRs through EHR vendor-supported software modules. It standardizes EHR integration through universal real-time APIs and a unified data model. To connect to an EHR, health IT partners code once to the Emissary APIs. Emissary also provides tools to assist with the monitoring and management of the environment, including advanced security and auditing features.
+      = partial "partials/snippets/button", :locals => { :label => "Schedule an Emissary Demo", :url => "/emissary/", :button_classes => "button button--light button-inline", :data_track_group => "integration", :item_id => "get-cmi", :icon => "icon-chevron-right", :icon_align => "right" }
+
+
   .row
     .columns.shrink
       .media-object.relative.has-blob
@@ -102,7 +109,9 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
       h4.headline-5 Connection Setup and Maintenance
       p Datica’s Integration Engineers will build, configure, test and maintain VPN connections to allow for transmission of HL7 messages.
       h4.headline-5 Interface Build and Configuration
-      p We will transform HL7 messages into JSON or FHIR messages to help keep things standard for you across implementations. We have many predesigned channels ready to go.
+      p.group We will transform HL7 messages into JSON or FHIR messages to help keep things standard for you across implementations. We have many predesigned channels ready to go.
+      = partial("partials/cards/quote-customer", :locals => { :customer => data.site.customers['66BznN8Y482iSswswQAice'], :classes => 'nopad bg-gray-11' })
+              / <h2 class="headline-3">Get to market faster, beat the competition, and meet compliance requirements&mdash;all with fewer engineering resources.</h2>
 
 .strip.strip-cmi
 section.section-article.bg-white
